--- a/.gitlab-cy.yml
+++ b/.gitlab-cy.yml
@@ -1,22 +1,20 @@
+image: node:latest
+
 stages:
+  - install
   - test
 
+install_dependencies:
+  stage: install
+  script:
+    - npm install
+  artifacts:
+    paths:
+      - node_modules/
 
-test_job:
+run_tests:
   stage: test
   script:
-    - npm install 
-    - npm test    
-  only:
-    - merge_requests
-    - branches
-  except:
-    - master    
-
-
-variables:
-  GIT_DEPTH: "1" 
-
-cache:
-  paths:
-    - node_modules/
+    - npx wdio wdio.conf.js
+  dependencies:
+    - install_dependencies
