gitlab configurado para rodar testes android

--- a/.gitlab-cy.yml
+++ b/.gitlab-cy.yml
@@ -1,20 +1,27 @@
 image: node:latest
 
 stages:
-  - install
+  - setup
   - test
 
-install_dependencies:
-  stage: install
+variables:
+  ANDROID_HOME: "/usr/local/android-sdk"
+  PATH: "$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools"
+
+before_script:
+  - apt-get update && apt-get install -y openjdk-11-jdk
+  - curl -sL https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip -o android-sdk.zip
+  - unzip android-sdk.zip -d /usr/local/
+  - mv /usr/local/tools /usr/local/android-sdk/tools
+  - echo y | sdkmanager --sdk_root=$ANDROID_HOME --install "platform-tools" "platforms;android-29" "build-tools;29.0.3"
+  - npm install -g appium
+
+setup_environment:
+  stage: setup
   script:
     - npm install
-  artifacts:
-    paths:
-      - node_modules/
 
 run_tests:
   stage: test
   script:
-    - npx wdio wdio.conf.js
-  dependencies:
-    - install_dependencies
+    - npx wdio wdio.conf.js 
